# cs378h-concurrency

./: .gitignore
p1/: 100000_1_floats.txt  100000_ints.txt  10000_10_floats.txt  10000_ints.txt  1000_100_floats.txt  1000_ints.txt  100_1000_floats.txt  100_100_floats.txt  100_ints.txt  10_10000_floats.txt  10_10_floats.txt  10_ints.txt  1_100000_floats.txt  1_2_floats.txt  2_2_floats.txt  5_2_floats.txt  Makefile  argparse.cc  argparse.cpp  argparse.h  barrier.h  generate_input.py  main.cc  main.cpp  pfxsum  scan.cc  scan.cpp  scan.h  scan.tpp  scan_ops.cpp  scan_ops.h  scan_ops.tpp  scan_types.h
p1/data/: 1000000_ints_0_mp.data  1000000_ints_0_we.data  1000000_ints_10_mp.data  1000000_ints_10_we.data  1000000_ints_12_mp.data  1000000_ints_12_we.data  1000000_ints_14_mp.data  1000000_ints_14_we.data  1000000_ints_16_mp.data  1000000_ints_16_we.data  1000000_ints_18_mp.data  1000000_ints_18_we.data  (+253 more)
p2/: .#execute.sh  analyze.py  execute.sh  p2.tex
p3/: Makefile  analyze.py  avg.sh  cuda.cu  cuda_util.h  defs.h  execute.sh  functors.h  kernels.sh  n2048-d16-c16-answer.txt  params.h  print_avgs.py  rng.cpp  rng.h  seq  seq.cpp  seq.cu  strided_range.h  thrust.cu  thrust_defs.h  thrust_functors.h
p4/: README  analyze.py  run.sh
p4/skeleton-2pc/: Cargo.toml  check.sh  run.sh
p4/skeleton-2pc/src/: checker.rs  client.rs  coordinator.rs  main.rs  message.rs  oplog.rs  participant.rs  tpcoptions.rs
p5/: checker.py  run.sh
pfinal/: analyze.py  backtest_cuda.sh  backtest_seq.sh  extractor.py  kalman_cuda.sh  kalman_seq.sh  plot.py  rng.py  run.sh
(+270 files in other folders)
