[package]
name = "cs380p-2pc"
version = "0.1.0"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.4"
atomic-counter = "1.0.1"
ctrlc = "3.1.3"
rand = "0.7.0"
serde_json = "1.0.40"
log = "0.4.8"
commitlog = "0.1.1"
stderrlog = "0.4.1"
shellexpand = "2.0.0"

